# HobbyScript

./: .gitignore  .travis.yml  README.md  TimeLine2.md  build.gradle  local.properties  settings.gradle
LLVM-Runner/: CMakeLists.txt  main.cpp  result.ast
LLVM-Runner/includes/: CMakeLists.txt
LLVM-Runner/includes/unitcpp/: Config.h
LLVM-Runner/src/: CMakeLists.txt  main.cpp
LLVM-Runner/src/ast/: AstLeaf.cpp  AstLeaf.h  AstList.cpp  AstList.h  AstNode.cpp  AstNode.h  AstNodes.h  BinaryExpr.cpp  BinaryExpr.h  CMakeLists.txt  NumberLiteral.cpp  NumberLiteral.h
LLVM-Runner/src/llvm/: LLVMCodeGenVisitor.cpp  LLVMCodeGenVisitor.h  LLVMVisitor.cpp  LLVMVisitor.h  TestCodeGenVisitor.cpp
LLVM-Runner/src/visitor/: AstVisitor.cpp  AstVisitor.h  CMakeLists.txt  TestAstVisitor.cpp  Visitor.h
MiddleCode/: 1470543154570
Test/: ArrayList  ClassTest1  ClassTest2  ClassThisPoint  ClosureTest2  FTTest2  LexerTest  LinkedList  LocalEnvTest  ReturnTest  STTest2  ScriptTest  ShellTest  TypeChangeTest
Test/HobbyScript/Ast/: FuncStmtTest.java
doc/: TimeLine.md  Todo.md
llvm-runner/: .gitignore  .travis.yml  CMakeLists.txt  convert_gv_to_graph.py  generate_plugins_llvm.py  result.ast
llvm-runner/cmake/: FindLLVM.cmake  FindRapidJson.cmake  GitUtils.cmake  rapidjson.cmake
llvm-runner/docs/make-lang-llvm-backend/: index.md
llvm-runner/includes/: CMakeLists.txt  json.hpp
llvm-runner/src/: CMakeLists.txt  HobbyScript.cpp  config.h.in  main.cpp
llvm-runner/src/ast/: AstLeaf.cpp  AstList.cpp  AstList.h  AstNodes.h  BinaryExpr.cpp  BinaryExpr.h  CMakeLists.txt  DefBlockStmt.cpp  DefBlockStmt.h  FuncStmt.cpp  FuncStmt.h  StringLiteral.h  ast_class.cpp  ast_class.h  ast_common_node.h  ast_constant.cpp  ast_constant.h  ast_context.cpp  ast_context.h  ast_defs.cpp  ast_defs.h  ast_let.cpp  ast_let.h  ast_list.cpp  ast_list.h  ast_literal.cpp  ast_literal.h  ast_node.cpp  ast_node.h  ast_nodes.h  ast_nodes.hpp  ast_package.cpp  ast_package.h  ast_value.cpp  ast_value.h
llvm-runner/src/ast/common/: AstNode.h  ast_leaf.cpp  ast_leaf.h  ast_list.cpp  ast_list.h  ast_node.cpp  ast_node.h  ast_value_leaf.cpp  ast_value_leaf.h  ast_value_node.cpp  ast_value_node.h
llvm-runner/src/ast/expr/: BinaryExpr.cpp  BinaryExpr.h  ast_binary_expr.cpp  ast_binary_expr.h
llvm-runner/src/ast/literals/: NumberLiteral.cpp  NumberLiteral.h  StringLiteral.cpp  StringLiteral.h  ast_bool_literal.cpp  ast_bool_literal.h  ast_literal.cpp  ast_literal.h  ast_number_literal.cpp  ast_number_literal.h  ast_string_literal.cpp  ast_string_literal.h  number_literal.cpp  number_literal.h  string_literal.cpp  string_literal.h
llvm-runner/src/ast/program/: ast_program.cpp  ast_program.h
llvm-runner/src/ast/stmt/: DefBlockStmt.cpp  DefBlockStmt.h  FuncStmt.cpp  FuncStmt.h
llvm-runner/src/common/: CMakeLists.txt  ast_common.h  common.cpp  common.h  gen_common.h  gen_graph.cpp  gen_graph.h  llvm_common.h  llvm_type.h  type_common.h  utility.h  visitor_common.h
llvm-runner/src/lex/: hobby.lex  lex.h  tokens.hpp
llvm-runner/src/llvm/: CMakeLists.txt  LLVMCodeGenVisitor.cpp  LLVMCodeGenVisitor.h  TestCodeGenVisitor.cpp
llvm-runner/src/parser/: CMakeLists.txt  gen.sh  hobby.lex  hobby.tab.cpp  hobby.tab.hpp  hobby.yy  hobby.yy.cpp  object.cpp  object.h  parser_runner.cpp
llvm-runner/src/plugins/: CMakeLists.txt  gc.c  gc.h  gen_plugins.sh  plugin_core.c  plugin_core.h  plugin_include.c  plugin_include.ll  string.c  string.h
llvm-runner/src/runtime/: CMakeLists.txt  ast_context.cpp  ast_context.h  cplugins.cpp  cplugins.h  plugins.cpp  plugins.h  runtime.cpp  runtime.h
llvm-runner/src/test/: TestAstVisitor.cpp  test_ast_visitor.cpp  test_common_gen_code.cpp  test_macro.h  test_mock_ast_node.cpp
llvm-runner/src/type/: CMakeLists.txt  ast_type.cpp  ast_type.h  ast_types.hpp  auto_type.cpp  auto_type.h  class_type.cpp  class_type.h  integer_type.cpp  integer_type.h  llvm_struct_type.cpp  llvm_struct_type.h  string_type.cpp  string_type.h
llvm-runner/src/utils/: CMakeLists.txt  JsonUtils.h  common.cpp  common.h
llvm-runner/src/visitor/: AstVisitor.cpp  AstVisitor.h  CMakeLists.txt  TestAstVisitor.cpp  code_gen_visitor.cpp  code_gen_visitor.h  graph_gen_visitor.cpp  graph_gen_visitor.h  llvm_gen_visitor.cpp  llvm_gen_visitor.h  type_llvm_visitor.cpp  type_llvm_visitor.h  visitor.h  visitor_base.h  visitors.hpp
llvm-runner/tests/: CMakeLists.txt  main.cpp  test_common.cpp  test_common.h  test_config.h.in  test_cpp_gen.cpp  test_graph_gen.cpp  test_mock_ast_node.cpp  test_parser.cpp  test_string.cpp  test_visitor.cpp
llvm-runner/tests/test_parse_input/: assign_var_simple.hobby  assign_var_string_literal.hobby  constant_package_simple.hobby  constant_value.hobby
llvm-runner/tests/validate_graph_gen/: test_node_0.gv
llvm_runner_py/: .gitignore  requirements.txt
llvm_runner_py/ast/: base_ast.py  expr_ast.py  literal.py  literal_ast.py  test_ast.py
llvm_runner_py/visitor/: base_visitor.py  hobbyhorse_visitor.py  test_hhs_visitor.py
src/HobbyScript/Ast/: Arguments.java  AstList.java  AstNode.java  BinaryExpr.java  BlockStmnt.java  BreakStmt.java  ClassStmt.java  Closure.java  DefBlockStmnt.java  Dot.java  ForStmt.java  FuncStmt.java  IfStmnt.java  Import.java  NegativeBoolExpr.java  NegativeExpr.java  NullStmt.java  ParameterList.java  PrimaryExpr.java  ReturnStmt.java  WhileStmt.java
src/HobbyScript/Cache/: Cacheable.java
src/HobbyScript/Compile/: CompileCallBack.java  ScriptCompile.java  Temp.java
src/HobbyScript/Eval/: ClassEval.java  FunctionEval.java  ImportEval.java  ScriptEval.java
src/HobbyScript/Exception/: HobbyException.java  ParseException.java
src/HobbyScript/Interpreter/: ArrayInterpreter.java  FunctionInterpreter.java  ImportInterpreter.java  NativeInterpreter.java  ScriptInterpreter.java
src/HobbyScript/Lexer/: HobbyLexer.java  (+1 more)
test/: ArrayList  ArrayTest1  ClassTest1  ClosureTest  ForTest1  FuckTest1  IfLocalEnvTest  LinkedTest  OpTest  ShellTest
test/llvm/: LLVMVisitorTest.java
test/middlecode/: 1470510049121  1470545121190  1470545552672
test/midtest/: midTest2
(+252 files in other folders)
