CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

project(LLVM_Runner)

set(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(UnitTest++ REQUIRED)

if (UnitTest++_FOUND)
    MESSAGE(STATUS "UnitTest++_CONFIG=${UnitTest++_CONFIG}")
    MESSAGE(STATUS "UnitTest++_LIBRARY=${UnitTest++_LIBRARY}")
    MESSAGE(STATUS ${UTPP_INCLUDE_DIRS} ${UnitTest++_DIR})
    INCLUDE_DIRECTORIES(${UTPP_INCLUDE_DIRS})
endif()

# Add all source files under the directory src to SOURCE_FILES
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)
AUX_SOURCE_DIRECTORY(src/visitor VISITOR)
AUX_SOURCE_DIRECTORY(src/ast AST)

ADD_EXECUTABLE(LLVM_Runner ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(LLVM_Runner UnitTest++)
