CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

project(llvm-runner)

set(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(parser)
ADD_SUBDIRECTORY(ast)
ADD_SUBDIRECTORY(gen)
ADD_SUBDIRECTORY(utils)

AUX_SOURCE_DIRECTORY(visitor VISITOR_SOURCE)
AUX_SOURCE_DIRECTORY(test TEST_SOURCE)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} MAIN_SOURCE)

SET(SOURCE_FILES
        ${LEX_SOURCE}
        ${AST_SOURCE}
        ${MAIN_SOURCE}
        ${GEN_SOURCE}
        ${VISITOR_SOURCE}
        ${UTILS_SOURCE}
        ${TEST_SOURCE})

message(STATUS ${SOURCE_FILES})

#add_library(source ${SOURCE_FILES})
#target_include_directories(source PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(llvm-runner HobbyScript.cpp ${SOURCE_FILES})

# target link lib
TARGET_LINK_LIBRARIES(llvm-runner ${LLVM_AVAILABLE_LIBS} Qt5::Core gtest_main)