CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

project(llvm-runner)

set(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_DEFINITIONS(-DPROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR})
CONFIGURE_FILE(config.h.in ${CMAKE_BINARY_DIR}/generated/config.h)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/generated/)


ADD_SUBDIRECTORY(parser)
ADD_SUBDIRECTORY(ast)
ADD_SUBDIRECTORY(gen)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(visitor)
ADD_SUBDIRECTORY(runtime)
ADD_SUBDIRECTORY(type)
ADD_SUBDIRECTORY(plugins)

SET(SOURCE_FILES
        ${LEX_SOURCE}
        ${VISITOR_SOURCE}
        ${AST_SOURCE}
        ${GEN_SOURCE}
        ${RUNTIME_SOURCE}
        ${TYPE_SOURCE}
        ${PLUGINS_SOURCE}
        ${COMMON_SOURCE})

MESSAGE(STATUS ${SOURCE_FILES})

#add_library(source ${SOURCE_FILES})
#target_include_directories(source PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(HobbyLib STATIC ${SOURCE_FILES})

ADD_EXECUTABLE(llvm-runner HobbyScript.cpp ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(HobbyLib Qt5::Core)

# target link lib
TARGET_LINK_LIBRARIES(llvm-runner ${LLVM_AVAILABLE_LIBS} Qt5::Core gtest_main)

